syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/barber";


message DeleteBarberShopServicesRequest{
    string id = 1;
}

message DeleteBarberShopServicesResponse{
    string status = 1;
}